@@ -191,3 +191,4 @@ ATTR_disable_automatic_requeue,
 ATTR_exitcodecanceledjob,
 ATTR_timeoutforjobdelete,
 ATTR_timeoutforjobrequeue,
+ATTR_dontwritenodesfile,
